[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/camera/Camera.gd" type="Script" id=1]

[node name="PlayerCamera" type="Node"]
script = ExtResource( 1 )

[node name="YawAxis" type="Spatial" parent="."]

[node name="PitchAxis" type="Spatial" parent="YawAxis"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="SpringArm" type="SpringArm" parent="YawAxis/PitchAxis"]
spring_length = 10.0

[node name="Camera" type="Camera" parent="YawAxis/PitchAxis/SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
